Fix navbar overflowing on smaller screens

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -40,7 +40,6 @@ nav {
 
   img {
     height: 25px;
-    margin-right: 1em;
   }
 }
 
